# django-channels-celery-nextjs-terraform-aws

./: .gitignore  README.md
docs/: 01-overview.md  02-backend-graphql.md  03-realtime-channels.md  04-celery-workers.md  05-frontend.md  06-deployment.md
sample/backend/: pyproject.toml
sample/backend/base/: model.py
sample/backend/config/: asgi.py  celery.py
sample/backend/config/settings/: common.py  production.py
sample/backend/gql/: cors_middleware.py  mutation.py  query.py  schema.py  subscription.py
sample/backend/graphql/: consumers.py  cors_middleware.py  schema.py
sample/frontend/: biome.json  codegen.ts  next.config.ts
sample/frontend/components/: ThemeRegistry.tsx
sample/frontend/lib/: apollo-client.ts  rsc-client.ts
sample/infra/.docker/development/: docker-compose.yaml
sample/infra/.docker/development/api/: Dockerfile  entrypoint.sh
sample/infra/.docker/development/api-beat/: entrypoint.sh
sample/infra/.docker/development/api-worker/: entrypoint.sh
sample/infra/.docker/production/: docker-compose.yaml
sample/infra/.docker/production/api/: Dockerfile  entrypoint.sh
sample/infra/.docker/production/api-beat/: entrypoint.sh
sample/infra/.docker/production/api-worker/: entrypoint.sh
sample/infra/.github-workflows/: ci.yml  deploy.yml
sample/infra/terraform/: compute.tf  main.tf  networking.tf  outputs.tf  storage.tf  user_data.sh  variables.tf
sample/logic/: permissions.py  types.py
sample/logic/mutations/: example.py
sample/logic/queries/: example.py
sample/logic/subscriptions/: example.py
sample/logic/tasks/: __init__.py  example.py
sample/scripts/: .scripts.env.example  _common.sh  connect.sh  db.sh  deploy.sh  graphql-sync.sh  logs.sh
